# mngr-openhands

./: .gitignore  LICENSE  README.md  pyproject.toml
src/imbue/mngr_openhands/: plugin.py
tests/: test_plugin.py  test_real_world.py
