[project]
name = "mngr-openhands"
version = "0.1.0"
description = "OpenHands agent type plugin for mngr — orchestrate OpenHands agents alongside Claude Code, Codex, OpenCode."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "imbue-mngr>=0.2.17",
]

[project.entry-points.mngr]
openhands = "imbue.mngr_openhands.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbue"]
